--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "heatapp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "schema": "heatapp",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,6 +12,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.0",
+    "axios": "^0.24.0",
     "expo": "~43.0.0",
     "expo-app-loading": "~1.2.1",
     "expo-auth-session": "~3.4.2",
